--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -7,7 +7,7 @@
             {{comment_text}}
         </div>
         <div class="comment-author">
-            -{{user.username}}, {{format_date created_at}}
+            -{{user.name}}, {{format_date created_at}}
         </div>
     </div>
     </div>
