--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,16 +1,15 @@
-<div class="container row">
-<div class="comments">
+<div>
   {{#each this}}
-    <div class="card post comment-box">
-    <div class="card-body post-body">
-        <div class="card-text comment-text">
-            {{comment_text}}
-        </div>
-        <div class="comment-author">
-            -{{user.name}}, {{format_date created_at}}
-        </div>
-    </div>
+    <div class="card">
+        <h3 class="card-header"></h3>
+        <section class="comment card-body">
+            <div class="text">
+              <p>  {{comment_text}} </p>
+            </div>
+            <div class="meta">
+            <p>   -{{user.name}}, {{format_date created_at}} {{format_time created_at}} </p>
+            </div>
+        </section>
     </div>
   {{/each}}
-</div>
 </div>
