--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
   <h1><a class="logo" href="/">Tech Blog</a></h1>
       <nav>
         <ul class="navbar">
-              <li><a class="link" href="/">Home</a></li>
-               <li><a class="link" href="/dash">Dashboard</a></li>
+              <a class="link" href="/">Home</a>
+              <a class="link" href="/dash">Dashboard</a>
               {{#if logged_in}}
-               <li><a class="link" href="/" id="logout">Logout</a></li>
+               <a class="link" href="/" id="logout">Logout</a>
               {{else}}
-               <li><a class="link" href="/login">Login</a></li>
+               <a class="link" href="/login">Login</a>
               {{/if}}
         </ul>
       </nav>
